# jorg

./: .gitignore  BUG_REPORT.md  CLAUDE.md  OPACITY_COMPARISON_RESULTS.md  OPACITY_METHOD_ANALYSIS.md  OPTIMIZED_TEST_SUMMARY.md  Project.toml  README.md  inspect_layer.jl  korg_detailed_reference.json  minimal_test.py  pytest.ini  results.json  setup.py  test_statmech_chemical_equilibrium.jl  test_statmech_standalone.py
Jorg/: Manifest.toml  PROJECT_STRUCTURE.md  pyproject.toml  requirements.txt  test_statmech_simple.py
Jorg/comparison_tests/: component_wise_comparison.py  create_final_comparison_plots.py
Jorg/comparisons/: focused_korg_jorg_comparison.py  plot_eos_comparison.py  simple_korg_jorg_comparison.py
Jorg/data/: partition_function_debug.json
Jorg/docs/source/: SPEED_TEST_RESULTS.md
Jorg/jorg/lines/: __init__.py  broadening.py  main.py
Jorg/jorg/utils/: __init__.py
Jorg/scripts/: generate_korg_reference.jl  get_korg_h_i_bf.jl
Jorg/src/jorg/lines/: core.py
Jorg/src/jorg/statmech/: __init__.py
Jorg/src/jorg/utils/: math.py
Jorg/tests/: quick_fix_h_i_bf.py  test_eos_final.py  test_eos_validation.py  test_jorg_eos_module.py
Jorg/tests/fixtures/: __init__.py
Jorg/tests/unit/continuum/: test_continuum.py
Jorg/tests/unit/lines/: __init__.py
Jorg/tests/unit/statmech/: test_partition_functions.py
Jorg/tests/unit/utils/: __init__.py
benchmarks/: linelist_reading_benchmark.py  speed_comparison.py
comparison_tests/: debug_h_i_bf.py  debug_hminus_interpolation.py  detailed_component_debug.jl  final_precision_debug.jl
comparisons/: korg_jorg_comparison.py  minimal_comparison.py
data/: eos_comparison_data.json  korg_jorg_comparison_report.json  korg_opacity_test.json  korg_partition_functions.json
docs/: CONTINUUM_MODULE_DOCUMENTATION.md  DOCUMENTATION_INDEX.md  FINAL_KORG_JORG_COMPARISON_REPORT.md  LINELIST_USAGE.md  LINES_MODULE_DOCUMENTATION.md  MOLECULAR_EQUILIBRIUM_FIX_SUMMARY.md  ORGANIZATION_SUMMARY.md  README.md  SOURCE_CONSOLIDATION_SUMMARY.md  STELLAR_TYPES_COMPARISON_REPORT.md  SYNTHESIS_DOCUMENTATION.md
examples/: README.md  complete_opacity_demonstration.py  jorg_korg_comparison.py  jorg_vs_korg_comparison.py  marcs_to_opacity_example.py  minimal_opacity_demo.py  opacity_demonstration.py  quick_metal_line_synthesis.py  simple_opacity_example.py  simple_synth.py  synthesis.ipynb
jorg/: __init__.py  constants.py
korg_script/: 01_input_processing_validation.jl  02_atmospheric_structure_setup.jl  03_chemical_equilibrium_calculation.jl  04_continuum_opacity_REAL_korg.jl  04_continuum_opacity_calculation.jl  04_continuum_opacity_calculation_corrected.jl  04_continuum_opacity_exact_literature.jl  05_line_opacity_calculation.jl  06_radiative_transfer_calculation.jl  06_radiative_transfer_calculation_fixed.jl  basic_korg_synth.jl  jorg_continuum_results.txt  korg_opacity_wave5000_5200.txt  korg_spectrum.txt  korg_spectrum_complete.txt  korg_spectrum_simple.txt  korg_synth_with_continuum.jl  korg_synthesize_atmosphere.txt  korg_synthesize_full.jl  korg_synthesize_opacity_summary.txt  korg_synthesize_radiative_transfer.txt  korg_synthesize_simple.jl  korg_synthesize_species.txt  korg_synthesize_spectrum.txt  simple_korg_synth.jl
regression_results/: precision_report_20250807_135448.md  regression_results_20250807_135448.json
scripts/: debug_vald_parser.py  generate_korg_focused.jl  generate_simple_korg_data.jl  korg_linelist_benchmark.jl  simple_korg_benchmark.jl  simple_korg_test.jl  test_korg_opacity.jl
temp_analysis/: debug_continuum_opacity.py  test_line_amplitude_fix.py  test_line_windowing.py  test_notebook_conditions.py  (+5 more)
tests/: README.md  (+9 more)
(+387 files in other folders)
